# lw_hornor

./: .clang-format  convert_json.py  convert_ota.py  filelist.xml  lamp3.txt  lamp4.txt  requirements.txt  测试SN号.xlsx  项目依赖管理.md
demo/: demo.c  demo_copy.c  ln882h_sdk.patch
docs/: HONOR Connect IoT SDK隐私声明.docx  OPEN SOURCE SOFTWARE NOTICE.doc
full/: filelist.xml
gcc-arm-none-eabi-10-2020-q4-major/: readme.txt
include/: magiclink.h  magiclink_cloud_raw_cmd.h  magiclink_log.h  magiclink_netcfg.h  magiclink_ota.h
ln882h-custom-imou/: .gitignore  CMakeLists.txt  start_build.py
ln882h-custom-imou/components/: CMakeLists.txt
ln882h-custom-imou/components/YankonHal/: CMakeLists.txt  myHal.h  myHalFlash.c  myHalFlash.h  myHalIO.c  myHalIO.h  myHalLog.c  myHalLog.h  myHalPwm.c  myHalPwm.h  myHalSpi.c  myHalSpi.h  myHalUart.c  myHalUart.h  myHalWifi.c  myHalWifi.h
ln882h-custom-imou/components/ble/ble_arch/: arch.h
ln882h-custom-imou/components/myCrc/: CMakeLists.txt  myCrc.c  myCrc.h
ln882h-custom-imou/components/myDimmingLib/: CMakeLists.txt  dimmingConvert.c  dimmingConvert.h  dimmingCurve.c  dimmingCurve.h  dimmingLib.h  dimmingMain.c  dimmingMain.h
ln882h-custom-imou/components/myKeyboardLib/: CMakeLists.txt  myKeyboard.c  myKeyboard.h  myRotaryKey.c  myRotaryKey.h
ln882h-custom-imou/components/net/iperf/: iperf.c
ln882h-custom-imou/components/net/ping/: ping.c
ln882h-custom-imou/components/utils/: ln_psk_calc.h  system_parameter.c
ln882h-custom-imou/components/utils/debug/: log.c
ln882h-custom-imou/components/wifi/wifi_lib_import/: wifi_port.h
ln882h-custom-imou/doc/: pwm.c
ln882h-custom-imou/doc/ln882h-document-collection-master/10.AT指令/: LN882H AT指令.xlsx  ReleaseNote.md  ap网页配网.doc  mqtt指令使用示例.docx  小程序(蓝牙)配网.doc
ln882h-custom-imou/doc/ln882h-document-collection-master/2.硬件测试报告/: LN882H硬件测试报告.xlsx
ln882h-custom-imou/doc/ln882h-document-collection-master/9.SDK文档/: readme.txt
ln882h-custom-imou/doc/yankon/: debug note.md  release note.md  to do list.md  几种配网方式.km  无线丢包问题优化.md
ln882h-custom-imou/lib/armcclib/: ln882h_ble_full_stack.lib  ln882h_wifi.lib
ln882h-custom-imou/mcu/driver_ln882h/hal/: hal_interrupt.c
ln882h-custom-imou/project/combo_mcu_basic_example/: CMakeLists.txt  ProjModuleCollect.cmake
ln882h-custom-imou/project/combo_mcu_basic_example/app/: main.c  usr_app.c  usr_ble_app.c
ln882h-custom-imou/project/combo_mcu_basic_example/keil_ln882h_rel/: firmware_XIP.uvprojx
ln882h-custom-imou/project/combo_mcu_basic_example/keil_ln882h_rel_AC6/: firmware_XIP.uvoptx
ln882h-custom-imou/project/combo_mcu_basic_example/readme/: UV4.exe keil-MDK-v5.39补丁.7z
ln882h-custom-imou/project/combo_mcu_basic_example/startup/: startup_ln882h_gcc.c
ln882h-custom-imou/project/yankon/: CMakeLists.txt  ProjModuleCollect.cmake
ln882h-custom-imou/project/yankon/app/: ble_app_user_cfg.h  demo.c  demo.h  demo_profile.h  flash.c  flash.h  gpio.c  gpio.h  key_task.h  lamptask.c  lamptask.h  ln_ate.c  ln_ate.h  main.c  slData.c  slData.h  usr_app.c  usr_app.h  usr_ble_app.c
ln882h-custom-imou/project/yankon/bsp/: ln_drv_pwm.c  ln_flash_test.c
ln882h-custom-imou/project/yankon/cfg/: flash_partition_cfg.json
ln882h-custom-imou/project/yankon/gcc/: gcc-compiler-flags.cmake
ln882h-custom-imou/project/yankon/inc/: appConfig.h  appDefine.h
ln882h-custom-imou/tools/JFlash/: ln882h.jflash
opensourcelib/include/coap3/: coap.h  coap_config.h  coap_debug.h  coap_mem.h  coap_net.h  libcoap.h
unity_test/: meson.build  readme.txt  run.sh
unity_test/src/: getmac.h  main.c  netinfo.c  netinfo.h
unity_test/test/: testcode1.c
version/: readme  version
yankon_docs/: convert_json.py  key_secret.txt  lamp.txt  lamp2.txt  代码流程及梳理.md  用户交互和代码.md  荣耀SN方案.md
yankon_docs/log/: temp
yankon_docs/profile/: C1NL.json  博荣S改名.json  博荣S无渐变.json
yankon_docs/改进/: todo.md  内存问题.md  数据参数.md  方案.md  需求文档.km
yankon_docs/阳光资料说明/: 二按键库说明.md  荣耀sdk知识.km  荣耀设备信息页解析.md
yankon_docs/需求实现日志/: rules  todo.md  todolist.md  代码格式说明.md  代码规范说明.md  学会分解和执行.md  文件依赖.md  版本记录.md  痛点难点.md  被动收入.md  遇到的一些问题的总结.md  问题记录.md  需求实现.md
(+32 files in other folders)
